[tool.poetry]
name = "aula-02-s3"
version = "0.1.0"
description = ""
authors = ["Camila Santos <milass2000@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
